--- a/classic_theme/style.css
+++ b/classic_theme/style.css
@@ -463,7 +463,7 @@ input[type="submit"][disabled] {
 /***** Header *****/
 
 .header {
-  background: $color_1;
+  background: $header_background_color;
 }
 
 .header-inner {
@@ -679,7 +679,7 @@ input[type="submit"][disabled] {
 
 .footer-bottom {
   padding: 30px 0;
-  background: $color_1;
+  background: $sub_footer_background_color;
 }
 
 .footer-inner {
@@ -839,7 +839,7 @@ input[type="submit"][disabled] {
 /***** Hero component *****/
 
 .hero {
-  background: $color_1;
+  background: $hero_background_color;
   background-position: center;
   background-size: cover;
   height: 250px;
