--- a/classic_theme/templates/community_topic_page.hbs
+++ b/classic_theme/templates/community_topic_page.hbs
@@ -93,3 +93,7 @@
   </ul>
   {{pagination}}
 </div>
+<section class="container community-footer">
+  <h4>{{t 'suggest_new_post'}}</h4>
+  {{link 'new_post' role='button' class='button-large'}}
+</section>
