--- a/doc_theme/templates/article_page.hbs
+++ b/doc_theme/templates/article_page.hbs
@@ -1,3 +1,4 @@
+<main class="main-sidebar" role="main">
 <div id="sidebar" class="sidebar-panel">
   <ul class="sidebar">
     <li class="sidebar-item sidebar-home">
@@ -80,3 +81,4 @@
 
 
 <script>sidebar.$mount("main");</script>
+</main>
