--- a/doc_theme/templates/home_page.hbs
+++ b/doc_theme/templates/home_page.hbs
@@ -1,3 +1,4 @@
+<main class="main-sidebar" role="main">
 <div id="sidebar" class="sidebar-panel">
   <ul class="sidebar">
     <li class="sidebar-item sidebar-home open">
@@ -74,3 +75,4 @@
 
 
 <script>sidebar.$mount("#sidebar");</script>
+</main>
