--- a/doc_theme/templates/search_results.hbs
+++ b/doc_theme/templates/search_results.hbs
@@ -1,3 +1,4 @@
+<main class="main-sidebar" role="main">
 <div id="sidebar" class="sidebar-panel">
   <ul class="sidebar">
     <li class="sidebar-item sidebar-home">
@@ -77,3 +78,4 @@
 
 
 <script>sidebar.$mount("#sidebar");</script>
+</main>
