--- a/doc_theme/templates/category_page.hbs
+++ b/doc_theme/templates/category_page.hbs
@@ -1,3 +1,4 @@
+<main class="main-sidebar" role="main">
 <div id="sidebar" class="sidebar-panel">
   <ul class="sidebar">
     <li class="sidebar-item sidebar-home">
@@ -78,3 +79,4 @@
 </div>
 
 <script>sidebar.$mount("main");</script>
+</main>
