--- a/classic_theme/style.css
+++ b/classic_theme/style.css
@@ -102,7 +102,7 @@ input[disabled] {
 select {
   -webkit-appearance: none;
   -moz-appearance: none;
-  background: url("/hc/assets/dropdown-arrow.svg") no-repeat #fff;
+  background: url("$assets-zd-dropdown-arrow-svg") no-repeat #fff;
   background-position: right 10px center;
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -425,7 +425,7 @@ input[type="submit"][disabled] {
 
 [data-loading="true"] input,
 [data-loading="true"] textarea {
-  background: transparent url("/hc/assets/loader.gif") 99% 50% no-repeat;
+  background: transparent url("$assets-zd-loader-gif") 99% 50% no-repeat;
   background-size: 16px 16px;
 }
 
@@ -463,7 +463,7 @@ input[type="submit"][disabled] {
 /***** Header *****/
 
 .header {
-  background: $header_background_color;
+  background: $color_1;
 }
 
 .header-inner {
@@ -679,7 +679,7 @@ input[type="submit"][disabled] {
 
 .footer-bottom {
   padding: 30px 0;
-  background: $sub_footer_background_color;
+  background: $color_1;
 }
 
 .footer-inner {
@@ -839,7 +839,7 @@ input[type="submit"][disabled] {
 /***** Hero component *****/
 
 .hero {
-  background: $hero_background_color;
+  background: $color_1;
   background-position: center;
   background-size: cover;
   height: 250px;
