--- a/classic_theme/templates/document_head.hbs
+++ b/classic_theme/templates/document_head.hbs
@@ -2,3 +2,17 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.3.3/vue.min.js"></script>
 <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,700|Roboto:300,400,500,700" rel="stylesheet">
+
+
+<script>
+var HC = window.HC || {};
+
+HC.SETTINGS = {
+  icons: {
+    "{{settings.category_1_id}}": "{{settings.category_1_icon}}", // Getting Started
+    "{{settings.category_2_id}}": "{{settings.category_2_icon}}", // Knowledge Base
+    "{{settings.category_3_id}}": "{{settings.category_3_icon}}", // Community
+  },
+}
+
+</script>
