--- a/doc_theme/templates/community_topic_list_page.hbs
+++ b/doc_theme/templates/community_topic_list_page.hbs
@@ -35,7 +35,7 @@
   <div class="blocks topics">
     <ul class="blocks-list topics-list">
       {{#each topics}}
-        <li class="blocks-item topics-item {{#if internal}}topics-item-internal{{/if}}">
+        <li class="blocks-item topics-item {{#if internal}}blocks-item-internal{{/if}}">
            <a href="{{url}}" class="blocks-item-link">
              <h4 class="blocks-item-title">
                {{name}}
