--- a/doc_theme/templates/home_page.hbs
+++ b/doc_theme/templates/home_page.hbs
@@ -28,7 +28,7 @@
 
 <div class="container content">
   
-  <div class="community-image"></div>
+  <div class="home-image"></div>
 
   <h1 class="home-title">Welcome to Zen Themes!</h1>
   <p class="home-desc">Get familiar with the features and how they work:</p>
