--- a/role_theme/templates/article_page.hbs
+++ b/role_theme/templates/article_page.hbs
@@ -81,9 +81,7 @@
           </div>
         {{/with}}
         <div class="article-return-to-top">
-          <a href="#article-container">{{t 'return_to_top'}}
-            <span class="icon-arrow-up"></span>
-          </a>
+          <a href="#article-container">{{t 'return_to_top'}}<span class="icon-arrow-up"></span></a>
         </div>
       </footer>
       <section class="article-relatives">
