--- a/nest_theme/templates/community_post_list_page.hbs
+++ b/nest_theme/templates/community_post_list_page.hbs
@@ -3,19 +3,23 @@
     {{search submit=false class='search search-full' scoped=true}}
   </div>
 </section>
+
 <div class="container">
   <nav class="sub-nav">
     {{breadcrumbs}}
   </nav>
+
   <header class="page-header community-header">
     <span class="dropdown">
       <span class="dropdown-toggle">
         <h4>{{t 'all_posts'}}</h4>
       </span>
       <span class="dropdown-menu" role="menu">
-        {{#link 'topics' role='menuitem' }} {{t 'show_topics'}}
+        {{#link 'topics' role='menuitem'}}
+          {{t 'show_topics'}}
         {{/link}}
-        {{#link 'posts' role='menuitem' selected='true' }} {{t 'show_all_posts'}}
+        {{#link 'posts' role='menuitem' selected='true'}}
+          {{t 'show_all_posts'}}
         {{/link}}
       </span>
     </span>
@@ -23,6 +27,7 @@
       {{link 'new_post' role='button' class='button-large'}}
     </span>
   </header>
+
   <div class="topic-header">
     <span class="topic-filters">
       <span class="dropdown">
@@ -51,6 +56,7 @@
       </span>
     </span>
   </div>
+
   <ul class="posts-list striped-list">
     {{#unless posts}}
       <div class="no-posts-with-filter">
@@ -66,14 +72,17 @@
               {{#if pinned}}
                 <span class="status-label status-label-pinned">{{t 'pinned'}}</span>
               {{/if}}
+
               {{#if featured}}
                 <span class="status-label status-label-featured">{{t 'featured'}}</span>
               {{/if}}
+
               {{#is status 'none'}}
-                {{else}}
-                  <span class="status-label-{{status_dasherized}} status-label striped-list-status">{{status_name}}</span>
+              {{else}}
+                <span class="status-label-{{status_dasherized}} status-label striped-list-status">{{status_name}}</span>
               {{/is}}
             </span>
+
             <ul class="meta-group">
               <li class="meta-data">{{author.name}}</li>
               {{#if editor}}
@@ -84,6 +93,7 @@
               {{/if}}
             </ul>
           </span>
+
           <div class="post-overview-count striped-list-count">
             <span class="striped-list-count-item">
               <span class="striped-list-number">{{vote_sum}}</span>
@@ -98,7 +108,9 @@
       </li>
     {{/each}}
   </ul>
+
   {{pagination}}
+
   {{#if featured_posts}}
     <section class="section community-featured-posts">
       <h3>{{t 'featured_posts'}}</h3>
@@ -113,11 +125,13 @@
       </ul>
     </section>
   {{/if}}
+
   <section class="community-activity activity">
     {{#if help_center.community_enabled}}
       {{recent_activity scope='community'}}
     {{/if}}
   </section>
+
   <section class="container community-footer">
     <h4>{{t 'suggest_new_post'}}</h4>
     {{link 'new_post' role='button' class='button-large'}}
