--- a/nest_theme/templates/community_post_page.hbs
+++ b/nest_theme/templates/community_post_page.hbs
@@ -1,8 +1,10 @@
 <div class="container-divider"></div>
 <div class="container">
   <nav class="sub-nav">
-    {{breadcrumbs}} {{search scoped=true submit=false}}
+    {{breadcrumbs}}
+    {{search scoped=true submit=false}}
   </nav>
+
   <div class="post-container">
     <div class="post">
       <article>
@@ -17,16 +19,19 @@
             {{#if post.pinned}}
               <span class="status-label status-label-pinned">{{t 'pinned'}}</span>
             {{/if}}
+
             {{#if post.featured}}
               <span class="status-label status-label-featured">{{t 'featured'}}</span>
             {{/if}}
+
             {{#is post.status 'none'}}
-              {{else}}
-                <span class="status-label-{{post.status_dasherized}} status-label">{{post.status_name}}</span>
+            {{else}}
+              <span class="status-label-{{post.status_dasherized}} status-label">{{post.status_name}}</span>
             {{/is}}
           </div>
           <div class="community-follow">{{subscribe}}</div>
         </header>
+
         <section class="post-info-container">
           <div class="post-info">
             <div class="post-author">
@@ -34,13 +39,15 @@
                 {{#if post.author.agent}}
                   <span class="icon-agent"></span>
                 {{/if}}
-                <img src="{{post.author.avatar_url}}" alt="Avatar" class="user-avatar" />
+                <img src="{{post.author.avatar_url}}" alt="Avatar" class="user-avatar"/>
               </div>
               <div class="post-meta">
                 <span title="{{post.author.name}}">
-                  {{#link 'user_profile' id=post.author.id}} {{post.author.name}}
+                  {{#link 'user_profile' id=post.author.id}}
+                    {{post.author.name}}
                   {{/link}}
                 </span>
+
                 <ul class="meta-group">
                   {{#if post.editor}}
                     <li class="meta-data">{{date post.edited_at timeago=true}}</li>
@@ -50,30 +57,39 @@
                   {{/if}}
                 </ul>
               </div>
+
               {{#if post.pending}}
                 <span class="status-label status-label-pending">{{t 'pending_approval'}}</span>
               {{/if}}
+
               {{#with post.ticket}}
                 <a href="{{url}}" target="_zendesk_lotus" class="status-label escalation-badge">
                   {{t 'request'}}{{id}}
                 </a>
               {{/with}}
             </div>
+
+
             <div class="post-content">
               <div class="post-body">{{post.details}}</div>
             </div>
           </div>
+
           <div class="post-actions-wrapper">
             <div class="post-vote vote" role='radiogroup'>
               {{#with post}}
-                {{vote 'up' role='radio' class='vote-up' selected_class='vote-voted'}} {{vote 'sum' class='vote-sum'}} {{vote 'down' role='radio' class='vote-down' selected_class='vote-voted'}}
+                {{vote 'up' role='radio' class='vote-up' selected_class='vote-voted'}}
+                {{vote 'sum' class='vote-sum'}}
+                {{vote 'down' role='radio' class='vote-down' selected_class='vote-voted'}}
               {{/with}}
             </div>
+
             <div class="post-actions actions">
               {{post.actions}}
             </div>
           </div>
         </section>
+
         <footer class="post-footer">
           <div class="post-share">{{share}}</div>
           {{#if comments}}
@@ -84,22 +100,24 @@
           {{/if}}
         </footer>
       </article>
+
       <section class="comment-overview" id="comment-overview">
-        <h3 class="comment-heading">
-          {{t 'comments'}}
-        </h3>
-        <p class="comment-callout">{{t 'comments_count' count=post.comment_count}}</p>
-        {{#if comments}}
-          <div class="dropdown comment-sorter">
-            <a class="dropdown-toggle">{{t 'sort_by'}}</a>
-            <span class="dropdown-menu" role="menu">
-              {{#each comment_sorters}}
-                <a aria-selected="{{selected}}" href="{{url}}" role="menuitem">{{name}}</a>
-              {{/each}}
-            </span>
-          </div>
+          <h3 class="comment-heading">
+            {{t 'comments'}}
+          </h3>
+          <p class="comment-callout">{{t 'comments_count' count=post.comment_count}}</p>
+          {{#if comments}}
+            <div class="dropdown comment-sorter">
+              <a class="dropdown-toggle">{{t 'sort_by'}}</a>
+              <span class="dropdown-menu" role="menu">
+                {{#each comment_sorters}}
+                  <a aria-selected="{{selected}}" href="{{url}}" role="menuitem">{{name}}</a>
+                {{/each}}
+              </span>
+            </div>
         {{/if}}
       </section>
+
       <ul id="comments" class="comment-list">
         {{#each comments}}
           <li id="{{anchor}}" class="comment">
@@ -108,18 +126,21 @@
                 {{#if official}}
                   <span class="comment-official status-label status-label-official">{{t 'official_comment'}}</span>
                 {{/if}}
+
                 <div class="comment-author">
                   <div class="avatar comment-avatar">
                     {{#if author.agent}}
                       <span class="icon-agent"></span>
                     {{/if}}
-                    <img src="{{author.avatar_url}}" alt="Avatar" class="user-avatar" />
+                    <img src="{{author.avatar_url}}" alt="Avatar" class="user-avatar"/>
                   </div>
                   <div class="comment-meta">
                     <span title="{{author.name}}">
-                      {{#link 'user_profile' id=author.id}} {{author.name}}
+                      {{#link 'user_profile' id=author.id}}
+                        {{author.name}}
                       {{/link}}
                     </span>
+
                     <ul class="meta-group">
                       {{#if editor}}
                         <li class="meta-data">{{date edited_at timeago=true}}</li>
@@ -140,12 +161,16 @@
                     {{/if}}
                   </div>
                 </div>
+
                 <section class="comment-body">{{body}}</section>
               </div>
+
               <div class="comment-actions-container">
                 {{#unless official}}
                   <div class="comment-vote vote" role='radiogroup'>
-                    {{vote 'up' role='radio' class='vote-up' selected_class='vote-voted'}} {{vote 'sum' class='vote-sum'}} {{vote 'down' role='radio' class='vote-down' selected_class='vote-voted'}}
+                    {{vote 'up' role='radio' class='vote-up' selected_class='vote-voted'}}
+                    {{vote 'sum' class='vote-sum'}}
+                    {{vote 'down' role='radio' class='vote-down' selected_class='vote-voted'}}
                   </div>
                 {{/unless}}
                 <div class="comment-actions actions">
@@ -156,22 +181,28 @@
           </li>
         {{/each}}
       </ul>
+
       {{pagination}}
+
       <section class="post-comments">
-        {{#form 'comment' class='comment-form' }}
+        {{#form 'comment' class='comment-form'}}
           <div class="avatar comment-avatar">
             {{user_avatar class='user-avatar'}}
           </div>
           <div class="comment-container">
             {{wysiwyg 'body'}}
             <div class="comment-form-controls">
-              {{checkbox 'official'}} {{label 'official'}} {{input type='submit'}}
+              {{checkbox 'official'}}
+              {{label 'official'}}
+              {{input type='submit'}}
             </div>
           </div>
         {{/form}}
       </section>
+
       <p class="comment-callout">{{comment_callout}}</p>
     </div>
+
     <section class="post-sidebar">
       <h3 class="sidebar-title">{{t 'suggest_new_post'}}</h3>
       <span class="post-to-community">
