--- a/nest_theme/templates/community_topic_page.hbs
+++ b/nest_theme/templates/community_topic_page.hbs
@@ -1,8 +1,10 @@
 <div class="container-divider"></div>
 <div class="container">
-  <nav class="sub-nav">
-    {{breadcrumbs}} {{search scoped=true submit=false}}
+   <nav class="sub-nav">
+    {{breadcrumbs}}
+    {{search scoped=true submit=false}}
   </nav>
+
   <header class="page-header">
     <h1>
       {{topic.name}}
@@ -20,6 +22,7 @@
       {{subscribe}}
     </div>
   </div>
+
   <div class="topic-header">
     <span class="topic-filters">
       <span class="dropdown">
@@ -48,6 +51,7 @@
       </span>
     </span>
   </div>
+
   <ul class="posts-list striped-list">
     {{#each posts}}
       <li>
@@ -58,14 +62,17 @@
               {{#if pinned}}
                 <span class="status-label status-label-pinned">{{t 'pinned'}}</span>
               {{/if}}
+
               {{#if featured}}
                 <span class="status-label status-label-featured">{{t 'featured'}}</span>
               {{/if}}
+
               {{#is status 'none'}}
-                {{else}}
-                  <span class="status-label-{{status_dasherized}} status-label striped-list-status">{{status_name}}</span>
+              {{else}}
+                <span class="status-label-{{status_dasherized}} status-label striped-list-status">{{status_name}}</span>
               {{/is}}
             </span>
+
             <ul class="meta-group">
               <li class="meta-data">{{author.name}}</li>
               {{#if editor}}
@@ -76,6 +83,7 @@
               {{/if}}
             </ul>
           </span>
+
           <div class="post-overview-count striped-list-count">
             <span class="striped-list-count-item">
               <span class="striped-list-number">{{vote_sum}}</span>
@@ -92,6 +100,7 @@
   </ul>
   {{pagination}}
 </div>
+
 <section class="container community-footer">
   <h4>{{t 'suggest_new_post'}}</h4>
   {{link 'new_post' role='button' class='button-large'}}
